--- a/response-tweaker/response-tweaker/MainPage.xaml
+++ b/response-tweaker/response-tweaker/MainPage.xaml
@@ -9,8 +9,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel x:Name="ControlsPanel"
@@ -23,34 +21,41 @@
                     Click="LoadUrlButton_OnClick"
                     Content="Load JSON Uri Resource" />
         </StackPanel>
-        <StackPanel Grid.Row="1"
-                    Orientation="Horizontal">
-            <TextBlock FontWeight="Bold"
+        <StackPanel Grid.Row="1">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock FontWeight="Bold"
                        Text="Loaded File Name:" />
-            <TextBlock x:Name="FileName"
+                <TextBlock x:Name="FileName"
                        Margin="10,0,0,0"
                        IsTextSelectionEnabled="True"
                        Text="{x:Bind ViewModel.FileNamePath, Mode=OneWay}" />
-        </StackPanel>
-        <StackPanel Grid.Row="2" 
-                    Orientation="Horizontal">
-            <TextBlock FontWeight="Bold"
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock FontWeight="Bold"
                        Text="Url:" />
-            <TextBox x:Name="WebUrl"
+                <TextBox x:Name="WebUrl"
                        Margin="10,0,0,0"
                        Text="{x:Bind ViewModel.WebFileNamePath, Mode=TwoWay}" />
-        </StackPanel>
-        <StackPanel Grid.Row="3"
-                    Orientation="Horizontal">
-            <TextBlock FontWeight="Bold"
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock FontWeight="Bold"
+                       Text="File Prefix:" />
+                <TextBox x:Name="Prefix"
+                       Margin="10,0,0,0"
+                       Text="{x:Bind ViewModel.SavedFilePrefix, Mode=TwoWay}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock FontWeight="Bold"
                        Text="Saved File Name:" />
-            <TextBlock x:Name="SavedFileName"
+                <TextBlock x:Name="SavedFileName"
                        Margin="10,0,0,0"
                        IsTextSelectionEnabled="True"
                        Text="{x:Bind ViewModel.SavedFileNamePath, Mode=OneWay}" />
+            </StackPanel>
+
         </StackPanel>
         <responseTweaker:JObjectViewer x:Name="JObjectViewer"
-                                       Grid.Row="4"
+                                       Grid.Row="2"
                                        SourceJObject="{x:Bind ViewModel.SourceObject, Mode=OneWay}" 
                                        ObjectUpdated="JObjectViewer_OnObjectUpdated"/>
     </Grid>
