--- a/response-tweaker/response-tweaker/JObjectViewer.xaml
+++ b/response-tweaker/response-tweaker/JObjectViewer.xaml
@@ -17,15 +17,18 @@
                     Grid.Row="0"
                     Orientation="Horizontal">
             <TextBlock Text="Path:"
-                       FontWeight="Bold" />
+                       FontWeight="Bold" Foreground="#EEEEEEEE" />
             <TextBlock Text="{x:Bind ViewModel.CurrentPath, Mode=OneWay}"
-                       Margin="10,0,0,0" />
+                       Margin="10,0,0,0" Foreground="#EEEEEEEE" />
         </StackPanel>
-        <Button x:Name="BackButton"
-                Grid.Row="1"
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="1">
+            <Button x:Name="BackButton"
                 Click="BackButton_OnClick"
+                Background="#EEEEEE"
                 IsEnabled="{x:Bind ViewModel.BackVisibility, Mode=OneWay}"
                 Content="Back" />
+        </StackPanel>
         <ListView x:Name="ObjectLevelViewer"
                   Grid.Row="2"
                   ItemsSource="{x:Bind ViewModel.JObjectCurrentListing, Mode=OneWay}"
@@ -42,8 +45,10 @@
                             <StackPanel Grid.Row="0"
                                         Orientation="Horizontal">
                                 <TextBlock Text="{x:Bind KeyLabel}"
+                                           Foreground="#EEEEEE"
                                            FontWeight="Bold" />
                                 <TextBlock Text=":"
+                                           Foreground="#EEEEEE"
                                            Margin="0,0,10,0" />
                             </StackPanel>
                             <StackPanel Grid.Row="1"
@@ -52,9 +57,11 @@
                                         Content="{x:Bind ExpandButtonLabel, Mode=OneWay}"
                                         Width="31"
                                         Height="31"
+                                        Background="#EEEEEE"
                                         Margin="0,0,5,0"
                                         Click="{x:Bind ExpandRequested}" />
-                                <Button IsEnabled="{x:Bind EditAllowed}"
+                                <Button Background="#EEEEEE"
+                                        IsEnabled="{x:Bind EditAllowed}"
                                         Content="{x:Bind EditButtonLabel, Mode=OneWay}"
                                         Click="{x:Bind EditRequested}" />
                             </StackPanel>
@@ -63,6 +70,7 @@
                                    Text="{x:Bind ValueLabel, Mode=OneWay}"
                                    MaxLines="{x:Bind MaxLinesForValueLabel, Mode=OneWay}"
                                    TextWrapping="NoWrap"
+                                   Foreground="#EEEEEE"
                                    TextTrimming="CharacterEllipsis"
                                    Visibility="{x:Bind ValueVisibility, Mode=OneWay}" />
                         <TextBox Text="{x:Bind ValueLabel, Mode=TwoWay}"
